--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -27,7 +27,7 @@
             bottom: 0;
             left: 0;
             width: 320px;
-            height: 300px;
+            height: 320px;
         }
         .align-center {
             text-align:center;
@@ -47,7 +47,7 @@
         <div class="form_bg">
             <form action="{{ url_for('gui_blueprint._login') }}" method="POST">
                 <div class="">
-                    <a class="navbar-brand" href="#"><h1><div class="badge badge-primary">FPA</div></h1></a>
+                    <a class="navbar-brand" href="#"><h1><div class="badge badge-primary">FPA</div></h1>{{ get_version() }}</a>
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" id="login_id" name="login_id" placeholder="User id">
