--- a/project/templates/editchange.html
+++ b/project/templates/editchange.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Edit Change{{ title }}{% endblock %}
 {% block head %}
     {{ super() }}
 {% endblock %}
