--- a/project/templates/edituser.html
+++ b/project/templates/edituser.html
@@ -7,20 +7,28 @@
 
 <div class="card text-center w-50 border-dark mx-auto">
 
-{% if data %}
-
+    {% if data %}
     <h5 class="card-header text-white bg-info">Account: {{ data.forename + " " + data.surname }}</h5>
-
     <div class="card-body px-lg-5 pt-0">
-    <form action="" method="POST" novalidate class="text-center" style="color: #757575;">
+    <form action="{{ url_for('gui_blueprint._edituser', id=data.id) }}" method="POST" novalidate class="text-center" style="color: #000000;">
+    {% else %}
+    <h5 class="card-header text-white bg-info">New User</h5>
+    <div class="card-body px-lg-5 pt-0">
+    <form action="{{ url_for('gui_blueprint._edituser', id=0) }}" method="POST" novalidate class="text-center" style="color: #000000;">
+    {% endif %}
+
         <table class="form-group">
           <tr>
+            <td>{{ form.hidden_tag() }}</td>
             <td>&nbsp;</td>
-            <td>{{ form.id }}</td>
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.login_id.label }}</td>
+            {% if not data %}
             <td class="px-4 py-1">{{ form.login_id(size=10, class_="form-control") }}</td>
+            {% else %}
+            <td class="px-4 py-1">{{ form.login_id(size=10, class_="form-control", disabled=True) }}</td>
+            {% endif %}
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.forename.label }}</td>
@@ -28,7 +36,7 @@
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.surname.label }}</td>
-            <td class="px-4 py-1">{{ form.surname(size=32, class_="form-control") }}</td>
+            <td class="px-4 py-1">{{ form.surname(size=64, class_="form-control") }}</td>
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.email.label }}</td>
@@ -36,21 +44,23 @@
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.password.label }}</td>
-            <td class="px-4 py-1">{{ form.password(size=32, class_="form-control") }}</td>
+            <td class="px-4 py-1">{{ form.password(size=32, class_="form-control") }}<small>Enter password to reset it for user</small></td>
           </tr>
           <tr>
             <td class="px-4 py-1">{{ form.comment.label }}</td>
-            <td class="px-4 py-1">{{ form.comment(rows=5, cols=6, class_="form-control") }}</td>
+            <td class="px-4 py-1">{{ form.comment(rows=5, cols=20, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.role.label }}</td>
+            <td class="px-4 py-1">{{ form.role(class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td class="p-5">{{ form.submit(class_="btn btn-primary button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._users') }}'">Cancel</button></td>
           </tr>
         </table>
     </form>
     </div>
-
-{% else %}
-
-    <h3>New user</h3>
-
-{% endif %}
 
 </div>
 
