--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -39,7 +39,9 @@
     {% endblock %}
 
     {% block footer %}
-    <small>&copy. 2019 written in Flask</small>
+    <div class="alert alert-light" role="alert">
+      <small>&copy. 2019 written in Flask</small>
+    </div>
     {% endblock %}
   </body>
 </html>
