--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fpa.css') }}{{ unique_time() }}">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
@@ -22,6 +23,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 
 <!--
     {% with messages = get_flashed_messages() %}
@@ -40,7 +42,7 @@
 -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
-        <a class="navbar-brand" href="#"><h1><div class="badge badge-primary">FPA</div></h1></a>
+        <a class="navbar-brand" href="#"><h1><div class="badge badge-primary"> {{ get_name() }} </div></h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,9 +52,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('gui_blueprint._index') }}">Dashboard <span class="sr-only">(current)</span></a>
           </li>
+        <!--
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('gui_blueprint._changes') }}">Changes</a>
           </li>
+        -->
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('gui_blueprint._bookings') }}">Bookings</a>
           </li>
@@ -66,7 +70,9 @@
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._users') }}">Users</a>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._fms') }}">FortiManagers</a>
               <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._parameters') }}">Parameters</a>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._logs', counter=10) }}">System Logs</a>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._email') }}">Email</a>
             </div>
           </li>
           {% endif %}
@@ -95,7 +101,9 @@
     {% endblock %}
 
     {% block footer %}
-    <small>&copy. 2019 written in Flask</small>
+    <div class="alert alert-light" role="alert">
+      <small>{{ get_copyright()|safe }}</small>
+    </div>
     {% endblock %}
   </body>
 </html>
