--- a/project/templates/search.html
+++ b/project/templates/search.html
@@ -6,7 +6,9 @@
 {% block content %}
 
 <div class="container-fluid mt-3">
-  <h3>Search Results</h3>
+  <h3>Search Results for: <i class="text-primary">{{ query }}</i></h3>
+
+
 
   <table class="table">
     <thead class="thead-light">
@@ -30,7 +32,7 @@
       <tr>
         <th scope="row">3</th>
         <td>Change to add ALLOW for DNS (UDP/53)</td>
-        <td>Change</td>        
+        <td>Change</td>
       </tr>
     </tbody>
   </table>
