--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
-    <title>{% block title %}{% endblock %} - Firewall Policy Automation</title>
+    <title>{% block title %}{% endblock %} - Firewall Booking Application</title>
     {% endblock %}
   </head>
   <body>
@@ -25,21 +25,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 
-<!--
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header">
-        <strong class="mr-auto">Messages</strong>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body">{{ messages }}</div>
-    </div>
-    {% endif %}
-    {% endwith %}
--->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
         <a class="navbar-brand" href="#"><h1><div class="badge badge-primary"> {{ get_name() }} </div></h1></a>
@@ -52,11 +37,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('gui_blueprint._index') }}">Dashboard <span class="sr-only">(current)</span></a>
           </li>
-        <!--
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('gui_blueprint._changes') }}">Changes</a>
-          </li>
-        -->
+
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('gui_blueprint._bookings') }}">Bookings</a>
           </li>
@@ -68,7 +49,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._users') }}">Users</a>
-              <a class="dropdown-item" href="{{ url_for('gui_blueprint._fms') }}">FortiManagers</a>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._fms') }}">Complexes</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._parameters') }}">Parameters</a>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._logs', counter=10) }}">System Logs</a>
@@ -82,19 +63,33 @@
               Logged in as<strong> {{ get_user() }}</strong>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._editprofile') }}">Profile</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._logout') }}">Logout</a>
             </div>
          </li>
 
         </ul>
 
-        <form class="form-inline my-2 my-lg-0" action="/fpa/search" method="GET">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" action="/fpa/search" method="POST">
+          <input class="form-control mr-sm-2" type="text" id="query" name="query" aria-label="Query">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
 
       </div>
     </nav>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <!-- <strong>Title</strong> --> {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
 
     {% block content %}
     <!-- This is where the main page content is inserted -->
