--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}{{ unique_time() }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-select.min.css') }}{{ unique_time() }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fpa.css') }}{{ unique_time() }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-datepicker.css') }}{{ unique_time() }}">
+
+    <link href="{{ url_for('static', filename='fullcalendar/packages/core/main.css')}}" rel='stylesheet' />
+    <link href="{{ url_for('static', filename='fullcalendar/packages/daygrid/main.css')}}" rel='stylesheet' />
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
@@ -20,10 +24,16 @@
     <!-- Optional JavaScript -->
     <script src="{{ url_for('static', filename='js/moment.js')}}{{ unique_time() }}"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.2.1.slim.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-select.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-datepicker.js')}}"></script>
+
+    <script src="{{ url_for('static', filename='fullcalendar/packages/core/main.js')}}"></script>
+    <script src="{{ url_for('static', filename='fullcalendar/packages/daygrid/main.js')}}"></script>
+    <script src="{{ url_for('static', filename='fullcalendar/packages/interaction/main.js')}}"></script>
+    <script src="{{ url_for('static', filename='fullcalendar/packages/moment/main.js')}}{{ unique_time() }}"></script>
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
@@ -35,20 +45,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('gui_blueprint._index') }}">Dashboard <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ url_for('gui_blueprint._index') }}">Dashboard</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('gui_blueprint._bookings') }}">Bookings</a>
           </li>
 
           {% if is_admin() %}
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Administration
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._users') }}">Users</a>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._roles') }}">Roles</a>
+              <a class="dropdown-item" href="{{ url_for('gui_blueprint._dates') }}">Dates</a>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._fms') }}">Complexes</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('gui_blueprint._parameters') }}">Parameters</a>
@@ -58,7 +70,7 @@
           </li>
           {% endif %}
 
-         <li class="nav-item dropdown">
+         <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Logged in as<strong> {{ get_user() }}</strong>
             </a>
