--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -26,8 +26,8 @@
             right: 0;
             bottom: 0;
             left: 0;
-            width: 320px;
-            height: 360px;
+            width: 600px;
+            height: 620px;
         }
         .align-center {
             text-align:center;
@@ -42,31 +42,47 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <div class="container">
-    <div class="row">
-        <div class="form_bg">
-            <form action="{{ url_for('gui_blueprint._login') }}" method="POST">
-                <div class="">
-                    <a class="navbar-brand" href="#"><h1><div class="badge badge-primary">FPA</div></h1>{{ get_version() }}</a>
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="login_id" name="login_id" placeholder="User id">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-                </div>
-                <br/>
-                <div class="align-center">
-                    <button type="submit" class="btn btn-success btn-lg" id="login">LOGIN</button>
-                </div>
-                <div class="align-center">
-                  <br/>
-                  <a href="{{ url_for('gui_blueprint._register') }}">Register for access to {{ get_name() }}</a>
-                </div>
+    <div class="form_bg">
+    <form action="{{ url_for('gui_blueprint._register') }}" method="POST" novalidate class="text-center" style="color: #000000;">
+      <div class="align-center">
+          <a class="navbar-brand" href="#"><h1><div class="badge badge-primary">FPA</div></h1>{{ get_version() }}</a>
+      </div>
 
-            </form>
-        </div>
-    </div>
+        <table class="form-group">
+          <tr>
+            <td>{{ form.hidden_tag() }}</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.login_id.label }}</td>
+            <td class="px-4 py-1">{{ form.login_id(size=10, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.forename.label }}</td>
+            <td class="px-4 py-1">{{ form.forename(size=32, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.surname.label }}</td>
+            <td class="px-4 py-1">{{ form.surname(size=64, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.email.label }}</td>
+            <td class="px-4 py-1">{{ form.email(size=32, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.comment.label }}</td>
+            <td class="px-4 py-1">{{ form.comment(rows=5, cols=20, class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td class="px-4 py-1">{{ form.vendor.label }}</td>
+            <td class="px-4 py-1">{{ form.vendor(class_="form-control") }}</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td class="p-5">{{ form.savebtn(class_="btn btn-success") }} <button type=button name="cancel" id="cancel" class="btn btn-secondary" onclick="location.href='{{ url_for('gui_blueprint._login') }}'">Cancel</button></td>
+          </tr>
+        </table>
+    </form>
     </div>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -81,13 +97,5 @@
       {% endif %}
     {% endwith %}
 
-    <!--
-    <div class="align-center">
-      {% if error %}
-      <p class="alert alert-warning"><strong>Error:</strong> {{ error }}
-      {% endif %}
-    </div>
-  -->
-  
   </body>
 </html>
